# UniInfer

./: CMakeLists.txt  README.md
docs/: ai-handoff.md  windows-dev-env.md
examples/: detect_mock.cpp
include/uninfer/: backend.hpp  buffer.hpp  config.hpp  core.hpp  cuda_check.hpp  decoder.hpp  factory.hpp  mock_backend.hpp  mock_decoder.hpp  mock_model.hpp  mock_preprocessor.hpp  model.hpp  preprocessor.hpp  result.hpp  task.hpp  tensor.hpp
src/: backend.cpp  buffer.cpp  cuda_check.cpp  factory.cpp  mock_backend.cpp  mock_decoder.cpp  mock_model.cpp  mock_preprocessor.cpp  tensor.cpp
